disunity-derive/tests/01-non-enum.stderr
error: Variant can't be derived on structs
 --> tests/01-non-enum.rs:4:1
  |
4 | struct Class {
  | ^^^^^^

error: Variant can't be derived on unions
  --> tests/01-non-enum.rs:10:1
   |
10 | union MyUnion {
   | ^^^^^
